--- a/style.css
+++ b/style.css
@@ -21,3 +21,20 @@
 	background-color: #f5f5f0;
 }
 
+.columna {
+	display: inline-block;
+	width: 40%;
+	padding-right: 100px;
+}
+
+.columna2 {
+	display: inline-block;
+	width: 40%;
+	padding-right: 100px;
+}
+
+.columna3 {
+	display: inline-block;
+	width: 40%;
+	padding-right: 100px;
+}
