--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 	padding: 6px 15px;
 	border-radius: 4px;
 	color: #fff
+	font-weight: bold;
 }
 
 .cont {
@@ -38,3 +39,27 @@
 	width: 40%;
 	padding-right: 100px;
 }
+
+.botones {
+	border: 1px solid gray;
+	padding: 8px;
+}
+
+.botones button {
+	font-weight: bold;
+	color: #fff;
+	background-color: #0066ff;
+	border: 1px solid #0066ff;
+	border-radius: 5px;
+	padding: 8px 10px;
+}
+
+.boton button {
+	font-weight: bold;
+	color: #fff;
+	background-color: #0066ff;
+	border: 1px solid #0066ff;
+	border-radius: 5px;
+	padding: 8px 10px;
+}
+
