--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .boton button {
 	color: #fff;
-	font-family: calibri;
 	background-color: #0066ff;
 	padding: 6px 15px;
 	border-radius: 4px;
@@ -8,7 +7,6 @@
 }
 
 .cont {
-	font-family: calibri; 
 	margin: 6rem;
 	border-radius: 5px;
 	border: 1px solid gray;
@@ -20,57 +18,52 @@
 }
 
 .sol {
-	width: 100%;
+	width: 99%;
 	border: 1px solid #d6d6c2;
 	background-color: #f5f5f0;
+	margin: 0;
+	padding-left: 10px;
+	padding-top: 10px;
+}
+
+.sol input {
+	width: 98%;
+	padding: 6px;
 }
 
 .columna {
-	width: 50%;
 	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
+	width: 48%;
+	padding-left: 10px;
 }
 
+.columna input {
+	width: 98%;
+	padding: 6px;
+}
 
 .columna2 {
-	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
+	width: 48%;
+	padding-left: 10px;
 }
 
 .columna3 {
 	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
+	padding-left: 10px;
+	width: 48%;
 }
 
 .columna4 {
-	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
+	padding-left: 10px;
 }
+.columna4 input{
+	padding: 6px;
+	width: 98%;
 
-.columna5 {
-	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
-}
-
-.columna6 {
-	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
-}
-
-.columna7 {
-	display: inline-block;
-	width: 40%;
-	padding-right: 100px;
 }
 
 .botones {
-	border: 1px solid gray;
+	border: 1px solid #d6d6c2;
 	padding: 8px;
 }
 
