--- a/style.css
+++ b/style.css
@@ -5,12 +5,15 @@
 .boton button {
 	color: #fff;
 	background-color: #0066ff;
+	border-color: #0066ff;
 	padding: 6px 15px;
 	border-radius: 4px;
-	font-weight: bold;
+	font-family: Arial;
 }
 
 .cont {
+	font-family: Arial;
+	font-size: 11.5pt;
 	margin-left: 6rem;
 	margin-right: 6rem;
 	border-radius: 5px;
@@ -18,13 +21,14 @@
 }
 
 .cont input {
+
 	border-radius: 4px;
-	border: 1px solid #d6d6c2;
+	border: 1px solid #E8E8E8;
 }
 
 .sol {
 	width: 98.98%;
-	border: 1px solid #d6d6c2;
+	border: 1px solid #E8E8E8;
 	background-color: #f5f5f0;
 	margin: 0;
 	padding-left: 10px;
@@ -42,7 +46,8 @@
 	padding-left: 10px;
 }
 
-.columna input {
+.columna input, select {
+	border-radius: 5px;
 	width: 98%;
 	padding: 6px;
 }
@@ -53,6 +58,8 @@
 }
 
 .columna3 {
+	margin-top: 8px;
+	margin-bottom: 15px;
 	display: inline-block;
 	padding-left: 10px;
 	width: 48%;
